# helium-data

./: .gitignore  Cargo.toml  README.md  docker-info.json  run-local.sh
.github/workflows/: docker-push.yaml
docker/bitnami-livy/: Dockerfile  README.md  build.sh  docker-compose.yml  run.sh
docker/koshelev-spark/: Dockerfile  build.sh
docker/panovvv-livy/: Dockerfile  README.md  docker-compose.yml
docker/spark-cluster-1/: docker-compose.yml
iot-cc-ranked/: Dockerfile  README.md  build.sh  main.py  publish.sh  run.sh
jupyter/: .condarc  Dockerfile  README.md
jupyter-community/: README.md  deltalake.ipynb  run.sh  sample.ipynb
opendata/jupyter-community/: Data.md  README.md  deltalake.ipynb
opendata/sparkmagic/: Dockerfile  aws-s3.ipynb  run.sh
protobuf-delta-lake-sink/: .gitignore  Cargo.toml  Delta Lake.ipynb  Dockerfile  run-local.sh
protobuf-delta-lake-sink/scripts/: run_beacon_ingest_report.sh  run_iot_reward_share.sh  run_lora_poc.sh  run_mobile_reward_share.sh  run_packet_report.sh
protobuf-delta-lake-sink/src/: chunked_stream.rs  error.rs  main.rs  store.rs
protobuf-delta-lake-sink/src/proto/: mod.rs  parse.rs  schema.rs
spark-docker/: .gitignore  Dockerfile  README.md  pull-jars.sh
spark-streaming-sql/: .gitignore  active-hotspot-rewards-query.sql  active-hotspots-query.sql  build.sbt  publish.sh  query.sql
spark-streaming-sql/src/main/scala/: B58.scala  Main.scala  TimestampExt.scala
spark-streaming-sql/test-queries/: hotspot-rewards.sql  iot-hotspot-rewards.sql  mobile-hotspot-rewards.sql
src/: main.rs  proto.rs  store.rs
(+1 files in other folders)
